; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/freescale/dpaa2/extr_dpaa2-eth.c_ingress_fq_count.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/freescale/dpaa2/extr_dpaa2-eth.c_ingress_fq_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dpaa2_eth_priv = type { i32, i32, %struct.dpaa2_eth_fq* }
%struct.dpaa2_eth_fq = type { i32 }

@.str = private unnamed_addr constant [22 x i8] c"query_fq_count failed\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.dpaa2_eth_priv*)* @ingress_fq_count to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ingress_fq_count(%struct.dpaa2_eth_priv* %0) #0 {
  %2 = alloca %struct.dpaa2_eth_priv*, align 8
  %3 = alloca %struct.dpaa2_eth_fq*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.dpaa2_eth_priv* %0, %struct.dpaa2_eth_priv** %2, align 8
  store i64 0, i64* %4, align 8
  store i64 0, i64* %5, align 8
  store i64 0, i64* %6, align 8
  store i32 0, i32* %7, align 4
  br label %9

9:                                                ; preds = %37, %1
  %10 = load i32, i32* %7, align 4
  %11 = load %struct.dpaa2_eth_priv*, %struct.dpaa2_eth_priv** %2, align 8
  %12 = getelementptr inbounds %struct.dpaa2_eth_priv, %struct.dpaa2_eth_priv* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = icmp slt i32 %10, %13
  br i1 %14, label %15, label %40

15:                                               ; preds = %9
  %16 = load %struct.dpaa2_eth_priv*, %struct.dpaa2_eth_priv** %2, align 8
  %17 = getelementptr inbounds %struct.dpaa2_eth_priv, %struct.dpaa2_eth_priv* %16, i32 0, i32 2
  %18 = load %struct.dpaa2_eth_fq*, %struct.dpaa2_eth_fq** %17, align 8
  %19 = load i32, i32* %7, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds %struct.dpaa2_eth_fq, %struct.dpaa2_eth_fq* %18, i64 %20
  store %struct.dpaa2_eth_fq* %21, %struct.dpaa2_eth_fq** %3, align 8
  %22 = load %struct.dpaa2_eth_fq*, %struct.dpaa2_eth_fq** %3, align 8
  %23 = getelementptr inbounds %struct.dpaa2_eth_fq, %struct.dpaa2_eth_fq* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @dpaa2_io_query_fq_count(i32* null, i32 %24, i64* %4, i64* %5)
  store i32 %25, i32* %8, align 4
  %26 = load i32, i32* %8, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %33

28:                                               ; preds = %15
  %29 = load %struct.dpaa2_eth_priv*, %struct.dpaa2_eth_priv** %2, align 8
  %30 = getelementptr inbounds %struct.dpaa2_eth_priv, %struct.dpaa2_eth_priv* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @netdev_warn(i32 %31, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  br label %40

33:                                               ; preds = %15
  %34 = load i64, i64* %4, align 8
  %35 = load i64, i64* %6, align 8
  %36 = add nsw i64 %35, %34
  store i64 %36, i64* %6, align 8
  br label %37

37:                                               ; preds = %33
  %38 = load i32, i32* %7, align 4
  %39 = add nsw i32 %38, 1
  store i32 %39, i32* %7, align 4
  br label %9

40:                                               ; preds = %28, %9
  %41 = load i64, i64* %6, align 8
  ret i64 %41
}

declare dso_local i32 @dpaa2_io_query_fq_count(i32*, i32, i64*, i64*) #1

declare dso_local i32 @netdev_warn(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
